--- a/index.html
+++ b/index.html
@@ -274,22 +274,21 @@
         <h2>Специальные предложения</h2>
         <div id="app_container" class="app__box"> <div class="box">
              <div class="box__info">
-               <h4>Оформите карту «Северяночка»</h4>
+               <h3>Оформите карту «Северяночка»</h3>
                <p>И получайте бонусы при покупке в магазинах и на сайте.</p>
              </div>
              <div class="cover_img">
                <img class="app_img" src="../assets/images/Home/home-card-images/app-card-1.png" alt="Северяночка">
              </div>
            </div>
-           <div class="box second_box">
+           <div class="second_box">
             <div class="box__info">
-              <h4>Покупайте акционные товары</h4>
+              <h3>Покупайте акционные товары</h3>
               <p>И получайте вдвое больше бонусов.</p>
             </div>
             <div class="cover_img">
               <img class="app_img" src="../assets/images/Home/home-card-images/app-card-2.png" alt="Северяночка">
             </div>
-          </div></div>
       </div>
     </section>
     <!-- sratr map section -->
@@ -371,7 +370,7 @@
           <a href="./pages/jobs.html">Все статьи
             <span><img src="../assets/images/Home/arrow-to-right.svg" alt="right arrow"></span></a>
         </div>
-        <div id="stati-root" class="stati__card_box"> <div class="card">
+        <div id="staty-root" class="staty__card_box"> <div class="card">
              <img src="../assets/images/Home/home-card-images/stati-1.png" alt="">
              <span class="date">05.03.2021</span>
              <h4>
@@ -382,7 +381,7 @@
       территории магазинов "ЛЕНТА". Информация обновляется каждый будний
       день.
              </p>
-             <button>Вce cтатьи </button>
+             <button class="card_btn">Вce cтатьи </button>
            </div>
            <div class="card">
             <img src="../assets/images/Home/home-card-images/stati-2.png" alt="">
@@ -393,7 +392,7 @@
             <p>
                8 Марта – это не просто Международный женский день, это ещё день тюльпанов, приятных сюрпризов и праздничных тёплых пожеланий.
             </p>
-            <button>Вce cтатьи
+            <button class="card_btn">Вce cтатьи
  
   </button>
           </div> <div class="card">
@@ -405,7 +404,7 @@
           <p>
             Голосуйте за любимые категории, выбирайте категорию-победителя в мобильном приложении и получайте кешбэк 10% баллами в апреле!.
           </p>
-          <button>Вce cтатьи
+          <button class="card_btn">Вce cтатьи
 
   </button>
         </div></div>
