--- a/index.html
+++ b/index.html
@@ -274,17 +274,17 @@
         <h2>Специальные предложения</h2>
         <div id="app_container" class="app__box"> <div class="box">
              <div class="box__info">
-               <h3>Оформите карту «Северяночка»</h3>
-               <p>И получайте бонусы при покупке в магазинах и на сайте.</p>
+               <h3 class="title">Оформите карту «Северяночка»</h3>
+               <p class="text">И получайте бонусы при покупке в магазинах и на сайте.</p>
              </div>
              <div class="cover_img">
                <img class="app_img" src="../assets/images/Home/home-card-images/app-card-1.png" alt="Северяночка">
              </div>
            </div>
-           <div class="second_box">
+           <div class=" box second_box">
             <div class="box__info">
-              <h3>Покупайте акционные товары</h3>
-              <p>И получайте вдвое больше бонусов.</p>
+              <h3 class="title">Покупайте акционные товары</h3>
+              <p class="text">И получайте вдвое больше бонусов.</p>
             </div>
             <div class="cover_img">
               <img class="app_img" src="../assets/images/Home/home-card-images/app-card-2.png" alt="Северяночка">
